# murphi-lib

./: .gitignore  CMakeLists.txt  README.md  murphi.pc.in
.github/workflows/: build-and-test.yml
include/: murphi.h
include/interfaces/: Identifyable.h  Printable.h
include/models/: ConstDecl.h  Decl.h  Designator.h  Expr.h  Formal.h  Quantifier.h  TypeDecl.h  TypeExpr.h  VarDecl.h
include/proc/: ProcDecl.h  Statements.h
include/rules/: rules.h
include/utils/: PrintUtils.h
src/: murphi.cpp
src/models/: ConstDecl.cpp  Decl.cpp  Designator.cpp  Expr.cpp  Formal.cpp  TypeDecl.cpp  TypeExpr.cpp  VarDecl.cpp
src/proc/: ProcDecl.cpp  Statements.cpp
src/rules/: rules.cpp
src/utils/: PrintUtils.cpp
tests/: decls-test.cpp  designator-test.cpp  expr-test.cpp  module-test.cpp  murphi-test.cpp  murphi.cpp  printutils-test.cpp  rules-test.cpp  statements-test.cpp  typeexpr-test.cpp
